# hng-14

./: .env.example  .gitignore  README.md  SOLUTION.md  app.py  classify.py  main.py  models.py  pyproject.toml  requirements-prod.txt  requirements.txt  utils.py  vercel.json
.github/workflows/: ci.yml
app/: __init__.py  cache.py  config.py  models.py  utils.py
app/routes/: auth.py  ingest.py  profile.py  user.py
scripts/: generate_test_csv.py
tests/: conftest.py  test_auth.py  test_profiles.py
