[project]
name = "hng-14"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "flask-jwt-extended",
    "flask-limiter",
    "psycopg2-binary",
    "pydantic-settings",
    "redis",
    "requests",
    "pycountry",
    "python-dotenv",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
